force-app/main/default/objects/ucinn_ascendv2__Interim_Process_Bases__c/ucinn_ascendv2__Interim_Process_Bases__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Interim Process Bases</label>
</CustomObject>