force-app/main/default/objects/ucinn_ascendv2__Interim_Process_Bases__c/fields/ucinn_ascendv2__Process_In_Progress_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Process_In_Progress_Class_Name__c</fullName>
    <label>Process In Progress Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>