force-app/main/default/objects/ucinn_ascendv2__Interim_Process_Bases__c/fields/ucinn_ascendv2__Process_Pending_Class_Namespace__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Process_Pending_Class_Namespace__c</fullName>
    <label>Process Pending Class Namespace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>