force-app/main/default/objects/ucinn_ascendv2__Interim_Process_Bases__c/fields/ucinn_ascendv2__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Record_Type__c</fullName>
    <label>Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>